<resources>
    <string name="app_name">ContextChat</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="contacts_string">Contacts</string>
    <string name="title_activity_single_conversation">SingleConversationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_settings">Settings</string>
    <string name="push_notifications_summary">Push enabled</string>
    <string name="push_notifictaions">Enable push notifications</string>
    <string name="edit_name_summary">Username ändern</string>
    <string name="edit_name">Username einstellen</string>
    <string name="chat_help">Help</string>
    <string name="edit_name_key">edit_name</string>
    <string name="edit_display_name_key">edit_display_name</string>
    <string name="spotify_summary">Enable Spotify</string>
    <string name="spotify_title">Enable Spotify</string>
    <string name="spotify_enabled_string">spotify_enabled</string>
    <string name="groupname">groupname</string>
    <string name="server_string">server_string</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="selected_configuration">smaller than 320dp</string>

    <string name="bike">&#58671;</string>
    <string name="walking">&#xe536;</string>
    <string name="car">&#xe531;</string>
    <string name="running">&#xe566;</string>
    <string name="tilt">&#xE1C1;</string>
    <string name="still">&#xE16B;</string>
    <string name="unknown">&#xE8FD;</string>


<string name="w01">&#xed80;</string>
<string name="w02">&#xed81;</string>
    <string name="w03">&#xed82;</string>
    <string name="w04">&#xed83;</string>
    <string name="w09">&#xec69;</string>
    <string name="w10">&#xec55;</string>
    <string name="w11">&#xeb33;</string>
    <string name="w13">&#xecb9;</string>
    <string name="w50">&#xed1d;</string>


    <string name="we01">&#xf00d;</string>
    <string name="we02">&#xf002;</string>
    <string name="we03">&#xed82;</string>
    <string name="we04">&#xed83;</string>
    <string name="we09">&#xec69;</string>
    <string name="we10">&#xec55;</string>
    <string name="we11">&#xeb33;</string>
    <string name="we13">&#xecb9;</string>
    <string name="we50">&#xed1d;</string>
    <string name="further_questions">Fragen? Probleme?\nWende dich bitte an priess@cip.ifi.lmu.de</string>
    <string name="tilt_enabled">tilt_enabled</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Details</string>

    <string name="walking_desc">%1$s geht gerade</string>
    <string name="onfoot_desc">%1$s geht oder rennt gerade</string>
<string name="running_desc">%1$s rennt gerade</string>
    <string name="tilt_desc">%1$s hat das Device stark bewegt</string>
    <string name="still_desc">%1$s bewegt das Device nicht</string>
<string name="vehicle_desc">%1$s befindet sich in einem Fahrzeug</string>
<string name="bicycle_desc">%1$s fährt gerade Fahrrad</string>
    <string name="default_desc">Nix.</string>
    <string name="location_updates_interval">location_updates_interval</string>
    <string name="activity_updates_interval">activity_updates_interval</string>
    <string name="activity_min_confidence">activity_min_confidence</string>
    <string name="max_minutes_for_dist_comp">max_minutes_for_dist_comp</string>
    <string name="max_minutes_last_location">max_minutes_last_location</string>
    <string name="max_seconds_last_activity">max_minutes_last_activity</string>
    <string name="group_pass">group_pass</string>
</resources>
