<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/spotify_enabled_string"
        android:summary="@string/spotify_summary"
        android:title="@string/spotify_title"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="@string/tilt_enabled"
        android:summary="Enable Tilt"
        android:title="Enable Tilt"
        android:defaultValue="true"/>
<EditTextPreference
    android:key="@string/edit_name_key"
    android:summary="@string/edit_name_summary"
    android:title="@string/edit_name"/>


<EditTextPreference
android:key="@string/edit_display_name_key"
    android:summary="Edit display name"
    android:title="Edit display name"

/>

    <EditTextPreference
        android:key="@string/groupname"
        android:title="Edit group membership"
        android:summary="Edit group membership"
/>
    <EditTextPreference
android:key="@string/server_string"
android:title="Set server base url"
        android:summary="Set server base url"
    />
</PreferenceScreen>